--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "sendgrid": "^1.9.0"
   },
   "devDependencies": {
-    "apidoc": "^0.13.1",
-    "semistandard": "^6.1.2"
+    "apidoc": "^0.13.1"
   },
   "apidoc": {
     "title": "Open AQ Platform API",
