--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^3.9.3",
     "moment": "^2.10.3",
     "mongodb": "^2.0.35",
+    "newrelic": "^1.21.1",
     "request": "^2.58.0",
     "require-dir": "^0.3.0",
     "sendgrid": "^1.9.0"
