--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "dependencies": {
     "async": "^1.2.1",
     "boom": "^2.8.0",
+    "csv-stringify": "0.0.8",
     "good": "^6.3.0",
     "good-console": "^5.0.2",
     "hapi": "^8.8.0",
-    "hapi-paginate": "^0.2.0",
-    "hapi-response-meta": "^0.2.0",
+    "hapi-paginate": "git+ssh://git@github.com:developmentseed/hapi-paginate.git#exclude-formats",
+    "hapi-response-meta": "git+ssh://git@github.com:developmentseed/hapi-response-meta.git#exclude-formats",
     "hapi-router": "^3.0.1",
     "lodash": "^3.9.3",
     "moment": "^2.10.3",
