--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "good": "^6.3.0",
     "good-console": "^5.0.2",
     "hapi": "^8.8.0",
-    "hapi-paginate": "git://github.com/developmentseed/hapi-paginate.git#exclude-formats",
-    "hapi-response-meta": "git://github.com/developmentseed/hapi-response-meta.git#exclude-formats",
+    "hapi-paginate": "^0.3.0",
+    "hapi-response-meta": "^0.3.0",
     "hapi-router": "^3.0.1",
     "lodash": "^3.9.3",
     "moment": "^2.10.3",
