--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "newrelic": "^1.21.1",
     "request": "^2.58.0",
     "require-dir": "^0.3.0",
-    "sendgrid": "^1.9.0"
+    "sendgrid": "^1.9.0",
+    "yargs": "^3.25.0"
   },
   "devDependencies": {
     "apidoc": "^0.13.1",
