--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "author": "",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "async": "^1.2.1",
     "boom": "^2.8.0",
-    "cheerio": "^0.19.0",
     "csv-stringify": "0.0.8",
     "good": "^6.3.0",
     "good-console": "^5.0.2",
@@ -24,19 +22,14 @@
     "hapi-response-meta": "^0.3.0",
     "hapi-router": "^3.0.1",
     "lodash": "^3.9.3",
-    "moment": "^2.10.3",
-    "moment-timezone": "^0.4.0",
     "mongodb": "^2.0.45",
-    "newrelic": "^1.21.1",
-    "request": "^2.58.0",
-    "require-dir": "^0.3.0",
-    "sendgrid": "^1.9.0",
-    "yargs": "^3.25.0"
+    "newrelic": "^1.21.1"
   },
   "devDependencies": {
     "apidoc": "^0.13.1",
     "chai": "^3.2.0",
     "mocha": "^2.2.5",
+    "request": "^2.58.0",
     "semistandard": "^7.0.2"
   },
   "apidoc": {
