--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "hapi-router": "^3.0.1",
     "lodash": "^3.9.3",
     "mongodb": "^2.0.45",
-    "newrelic": "^1.21.1"
+    "newrelic": "^1.21.1",
+    "universal-analytics": "^0.3.9"
   },
   "devDependencies": {
     "apidoc": "^0.13.1",
