--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "good-console": "^5.0.2",
     "hapi": "^8.8.0",
     "hapi-paginate": "^0.3.0",
+    "hapi-redis": "^6.0.0",
     "hapi-response-meta": "^0.3.0",
     "hapi-router": "^3.0.1",
     "lodash": "^3.9.3",
