--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "apidoc": "^0.13.1",
     "chai": "^3.2.0",
+    "eslint-plugin-react": "^3.9.0",
     "mocha": "^2.2.5",
     "request": "^2.58.0",
     "semistandard": "^7.0.2"
