--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "homepage": "https://github.com/openaq/openaq-api#readme",
   "dependencies": {
+    "async": "^1.5.0",
     "boom": "^2.8.0",
     "csv-stringify": "0.0.8",
     "good": "^6.3.0",
@@ -28,6 +29,7 @@
     "lodash": "^3.9.3",
     "mongodb": "^2.0.45",
     "newrelic": "^1.21.1",
+    "request": "^2.67.0",
     "winston": "^2.1.1",
     "winston-papertrail": "^1.0.2"
   },
