--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "good": "^6.3.0",
     "good-winston": "^1.0.0",
     "hapi": "^8.8.0",
-    "hapi-paginate": "^0.4.0",
+    "hapi-paginate": "github:developmentseed/hapi-paginate#cfa9067d634e2bcef9a631ee71646cc9dbf2f5f7",
     "hapi-redis": "^6.0.0",
     "hapi-response-meta": "^0.3.0",
     "hapi-router": "^3.0.1",
@@ -37,7 +37,6 @@
     "apidoc": "^0.13.1",
     "chai": "^3.2.0",
     "mocha": "^2.2.5",
-    "request": "^2.58.0",
     "semistandard": "^7.0.2"
   },
   "apidoc": {
