--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "apidoc": "^0.13.1",
     "chai": "^3.2.0",
     "mocha": "^2.2.5",
+    "request": "^2.67.0",
     "semistandard": "^7.0.2"
   },
   "apidoc": {
