--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 - chmod +x ./.build_scripts/deploy.sh
 - sudo apt-get -qq update
 - sudo apt-get install -y jq
-install: no install outside of Docker
+install: echo no install outside of Docker
 script: npm run docker-test
 after_success:
 - ".build_scripts/build.sh"
