--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 - sudo apt-get -qq update
 - sudo apt-get install -y jq
 - touch local.env
-install: echo no install outside of Docker
+install: npm install apidoc
 script: npm run docker-test
 after_success:
 - ".build_scripts/build.sh"
