--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "good-winston": "^1.0.0",
     "hapi": "^8.8.0",
     "hapi-paginate": "github:developmentseed/hapi-paginate#cfa9067d634e2bcef9a631ee71646cc9dbf2f5f7",
-    "hapi-redis": "^6.0.0",
     "hapi-response-meta": "^0.3.0",
     "hapi-router": "^3.0.1",
+    "hiredis": "^0.4.1",
     "keen-js": "^3.3.0",
     "knex": "^0.9.0",
     "knex-postgis": "^0.1.8",
     "lodash": "^3.10.1",
     "newrelic": "^1.21.1",
     "pg": "^4.4.3",
+    "redis": "^2.4.2",
     "winston": "^2.1.1",
     "winston-papertrail": "^1.0.2"
   },
