--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "newrelic": "^1.21.1",
     "pg": "^4.4.3",
     "redis": "^2.4.2",
+    "turf-distance": "^1.1.0",
+    "turf-point": "^2.0.1",
     "winston": "^2.1.1",
     "winston-papertrail": "^1.0.2"
   },
