--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "",
   "scripts": {
     "lint": "semistandard",
-    "test": "semistandard && mocha test/** --require babel-register",
+    "test": "npm run lint && PSQL_DATABASE=openaq-test mocha test/** --require babel-register",
     "start": "node index.js",
     "docs": "apidoc -i api/ -o docs/",
     "docker": "docker-compose --project openaq run --rm --service-ports api",
