Making sure docker-compose is available

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: node_js
 node_js:
 - '4.1'
 env:
+  DOCKER_COMPOSE_VERSION: 1.4.2
   global:
   - STAGING_BRANCH=develop
   - PRODUCTION_BRANCH=master
@@ -13,6 +14,10 @@ cache:
 services:
 - docker
 before_install:
+- sudo rm /usr/local/bin/docker-compose
+- curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+- chmod +x docker-compose
+- sudo mv docker-compose /usr/local/bin
 - chmod +x ./.build_scripts/build.sh
 - chmod +x ./.build_scripts/deploy.sh
 - touch local.env
