--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/openaq/openaq-api#readme",
   "dependencies": {
     "async": "^1.5.0",
+    "aws-sdk": "^2.7.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "boom": "^2.8.0",
