--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "keen-js": "^3.3.0",
     "knex": "^0.9.0",
     "knex-postgis": "^0.1.8",
+    "little-owl": "^1.0.0",
     "lodash": "^4.16.6",
     "newrelic": "^1.21.1",
     "pg": "^4.4.3",
