--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-register": "^6.3.13",
     "boom": "^2.8.0",
     "csv-stringify": "0.0.8",
+    "date-fns": "^1.28.5",
     "good": "^6.3.0",
     "good-winston": "^1.0.0",
     "hapi": "^8.8.0",
@@ -48,11 +49,11 @@
   "devDependencies": {
     "apidoc": "^0.13.1",
     "chai": "^3.2.0",
-    "mocha": "^2.2.5",
     "eslint": "^2.0.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2",
+    "mocha": "^2.2.5",
     "request": "^2.67.0"
   },
   "apidoc": {
