Use moment instead of date-fns

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "babel-register": "^6.3.13",
     "boom": "^2.8.0",
     "csv-stringify": "0.0.8",
-    "date-fns": "^1.28.5",
     "good": "^6.3.0",
     "good-winston": "^1.0.0",
     "hapi": "^8.8.0",
@@ -38,6 +37,7 @@
     "knex-postgis": "^0.1.8",
     "little-owl": "^1.0.0",
     "lodash": "^4.16.6",
+    "moment": "^2.18.1",
     "newrelic": "^1.21.1",
     "pg": "^4.4.3",
     "redis": "^2.4.2",
