--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "knex-postgis": "^0.1.8",
     "little-owl": "^1.0.0",
     "lodash": "^4.16.6",
+    "moment": "^2.18.1",
     "newrelic": "^1.21.1",
     "pg": "^4.4.3",
     "redis": "^2.4.2",
@@ -48,11 +49,11 @@
   "devDependencies": {
     "apidoc": "^0.13.1",
     "chai": "^3.2.0",
-    "mocha": "^2.2.5",
     "eslint": "^2.0.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2",
+    "mocha": "^2.2.5",
     "request": "^2.67.0"
   },
   "apidoc": {
