--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "newrelic": "^1.21.1",
     "pg": "^4.4.3",
     "redis": "^2.4.2",
+    "sinon": "^7.2.3",
     "turf-distance": "^1.1.0",
     "turf-point": "^2.0.1",
     "winston": "^2.1.1",
