--- a/package.json
+++ b/package.json
@@ -6,14 +6,25 @@
   "main": "",
   "scripts": {
     "lint": "eslint .",
-    "test-only": "mocha test/** --require babel-register",
-    "test": "npm run lint && npm run test-only",
-    "local-test": "PSQL_DATABASE=openaq-test npm test",
-    "local-test-only": "PSQL_DATABASE=openaq-test npm run test-only",
+    "test": "npm run lint && npm run mocha",
+    "_seed": "node_modules/.bin/knex seed:run",
+    "_migrate": "sleep 1; until node_modules/.bin/knex migrate:latest; do echo \"Database is not ready, will retry in 5 seconds...\"; sleep 5; done",
+    "mocha": "NODE_ENV=test mocha test/** --require babel-register",
     "start": "node index.js",
+    "dev": "NODE_ENV=development node_modules/.bin/nodemon index.js",
     "docs": "apidoc -i api/ -o docs/",
     "docker": "docker-compose -p openaq run --rm --service-ports api",
-    "docker-test": "docker-compose -p openaq run --rm api-test npm test"
+    "docker-test": "docker-compose -p openaq run --rm api-test npm test",
+    "init-dev-db": "node_modules/.bin/run-s start-dev-db migrate-dev-db seed-dev-db",
+    "start-dev-db": "docker-compose --project-name openaq-dev -f docker-compose-dev.yml up -d",
+    "migrate-dev-db": "NODE_ENV=development npm run _migrate",
+    "seed-dev-db": "NODE_ENV=development npm run _seed",
+    "stop-dev-db": "docker-compose --project-name openaq-dev -f docker-compose-dev.yml down",
+    "init-test-db": "node_modules/.bin/run-s start-test-db migrate-test-db seed-test-db",
+    "start-test-db": "docker-compose --project-name openaq-test -f docker-compose-test.yml up -d",
+    "migrate-test-db": "NODE_ENV=test npm run _migrate",
+    "seed-test-db": "NODE_ENV=test npm run _seed",
+    "stop-test-db": "docker-compose --project-name openaq-test -f docker-compose-test.yml down"
   },
   "author": "Joe Flasher",
   "engines": {
@@ -25,8 +36,9 @@
     "async": "^1.5.0",
     "aws-sdk": "^2.7.0",
     "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.3.13",
+    "babel-register": "^6.26.0",
     "boom": "^2.8.0",
+    "config": "^3.0.1",
     "csv-stringify": "0.0.8",
     "good": "^6.3.0",
     "good-winston": "^1.0.0",
@@ -35,12 +47,14 @@
     "hapi-response-meta": "^0.3.0",
     "hapi-router": "^3.0.1",
     "hiredis": "^0.4.1",
-    "knex": "^0.9.0",
-    "knex-postgis": "^0.1.8",
+    "knex": "^0.16.3",
+    "knex-postgis": "^0.7.0",
     "little-owl": "^1.0.0",
-    "lodash": "^4.16.6",
+    "lodash": "^4.17.11",
     "moment": "^2.18.1",
     "newrelic": "^1.21.1",
+    "nodemon": "^1.18.10",
+    "npm-run-all": "^4.1.5",
     "pg": "^4.4.3",
     "redis": "^2.4.2",
     "turf-distance": "^1.1.0",
