Update nvm and node version in Docker configuration for TravisCI.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dev": "NODE_ENV=development node_modules/.bin/nodemon index.js",
     "docs": "apidoc -i api/ -o docs/",
     "docker": "docker-compose -p openaq run --rm --service-ports api",
-    "docker-test": "docker-compose -p openaq run --rm api-test npm test",
+    "docker-test": "docker-compose -p openaq run --rm api-test npm run travis-test",
+    "travis-test": "npm run lint && NODE_ENV=travis mocha test/** --require babel-register",
     "init-dev-db": "node_modules/.bin/run-s start-dev-db migrate-dev-db seed-dev-db",
     "start-dev-db": "docker-compose --project-name openaq-dev -f docker-compose-dev.yml up -d",
     "migrate-dev-db": "NODE_ENV=development npm run _migrate",
