--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "test": "npm run lint && npm run mocha",
     "_seed": "node_modules/.bin/knex seed:run",
     "_migrate": "sleep 1; until node_modules/.bin/knex migrate:latest; do echo \"Database is not ready, will retry in 5 seconds...\"; sleep 5; done",
-    "mocha": "NODE_ENV=test mocha test/** --require babel-register",
+    "mocha": "NODE_ENV=test mocha test/index.js --require babel-register",
     "start": "node index.js",
     "dev": "NODE_ENV=development node_modules/.bin/nodemon index.js",
     "docs": "apidoc -i api/ -o docs/",
     "docker": "docker-compose -p openaq run --rm --service-ports api",
     "docker-test": "docker-compose -p openaq run --rm api-test npm run travis-test",
-    "travis-test": "npm run lint && NODE_ENV=travis mocha test/** --require babel-register",
+    "travis-test": "npm run lint && NODE_ENV=travis mocha test/index.js --require babel-register",
     "init-dev-db": "node_modules/.bin/run-s start-dev-db migrate-dev-db seed-dev-db",
     "start-dev-db": "docker-compose --project-name openaq-dev -f docker-compose-dev.yml up -d",
     "migrate-dev-db": "NODE_ENV=development npm run _migrate",
@@ -70,8 +70,8 @@
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2",
-    "mocha": "^2.2.5",
-    "request": "^2.67.0"
+    "mocha": "^6.0.2",
+    "request": "^2.88.0"
   },
   "apidoc": {
     "title": "Open AQ Platform API",
