Add test for locations update.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "boom": "^7.3.0",
     "config": "^3.0.1",
     "csv-stringify": "0.0.8",
+    "fs-extra": "^7.0.1",
     "good": "^6.3.0",
     "good-winston": "^1.0.0",
     "hapi": "^8.8.0",
@@ -65,7 +66,7 @@
   },
   "devDependencies": {
     "apidoc": "^0.13.1",
-    "chai": "^3.2.0",
+    "chai": "^4.2.0",
     "eslint": "^2.0.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
