--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "hapi-response-meta": "^0.3.0",
     "hapi-router": "^3.0.1",
     "hiredis": "^0.4.1",
+    "joi": "^14.3.1",
     "knex": "^0.16.3",
     "knex-postgis": "^0.7.0",
     "little-owl": "^1.0.0",
