Apply ESLint "no-console" rule.

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
   },  
   "rules": {
     "semi": [2, "always"],
+    "no-console": 2,
     "no-extra-semi": 2,
     "semi-spacing": [2, { "before": false, "after": true }]
   }
