--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "good": "^6.3.0",
     "good-winston": "^1.0.0",
     "hapi": "^8.8.0",
+    "hapi-auth-jwt2": "^7.4.1",
     "hapi-paginate": "github:developmentseed/hapi-paginate#cfa9067d634e2bcef9a631ee71646cc9dbf2f5f7",
     "hapi-response-meta": "^0.3.0",
     "hapi-router": "^3.0.1",
     "hiredis": "^0.4.1",
     "joi": "^14.3.1",
+    "jwks-rsa": "^1.4.0",
     "knex": "^0.16.3",
     "knex-postgis": "^0.7.0",
     "little-owl": "^1.0.0",
