--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "_migrate": "sleep 1; until node_modules/.bin/knex migrate:latest; do echo \"Database is not ready, will retry in 5 seconds...\"; sleep 5; done",
     "mocha": "NODE_ENV=test mocha test/test--index.js --require babel-register",
     "start": "node index.js",
-    "dev": "NODE_ENV=development node_modules/.bin/nodemon index.js",
+    "dev": "NODE_ENV=development API_DEBUG=true node_modules/.bin/nodemon index.js",
     "docs": "apidoc -i api/ -o docs/",
     "docker": "docker-compose -p openaq run --rm --service-ports api",
     "docker-test": "docker-compose -p openaq run --rm api-test npm run travis-test",
