--- a/.eslintrc
+++ b/.eslintrc
@@ -2,13 +2,15 @@
   "extends": ["standard"],
   "env": {
     "es6": true,
-    "node": true
+    "node": true,
+    "mocha": true
   },
   "parserOptions": {
     "ecmaVersion": 2018
   },  
   "rules": {
     "semi": [2, "always"],
+    "no-console": 2,
     "no-extra-semi": 2,
     "semi-spacing": [2, { "before": false, "after": true }]
   }
