--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "test": "npm run lint && npm run mocha",
     "_seed": "node_modules/.bin/knex seed:run",
     "_migrate": "sleep 1; until node_modules/.bin/knex migrate:latest; do echo \"Database is not ready, will retry in 5 seconds...\"; sleep 5; done",
-    "mocha": "NODE_ENV=test mocha test/** --require babel-register",
+    "mocha": "NODE_ENV=test mocha test/test--index.js --require babel-register",
     "start": "node index.js",
     "dev": "NODE_ENV=development node_modules/.bin/nodemon index.js",
     "docs": "apidoc -i api/ -o docs/",
     "docker": "docker-compose -p openaq run --rm --service-ports api",
     "docker-test": "docker-compose -p openaq run --rm api-test npm run travis-test",
-    "travis-test": "npm run lint && NODE_ENV=travis mocha test/** --require babel-register",
+    "travis-test": "npm run lint && NODE_ENV=travis mocha test/test--index.js --require babel-register",
     "init-dev-db": "node_modules/.bin/run-s start-dev-db migrate-dev-db seed-dev-db",
     "start-dev-db": "docker-compose --project-name openaq-dev -f docker-compose-dev.yml up -d",
     "migrate-dev-db": "NODE_ENV=development npm run _migrate",
@@ -38,9 +38,10 @@
     "aws-sdk": "^2.7.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.26.0",
-    "boom": "^2.8.0",
+    "boom": "^7.3.0",
     "config": "^3.0.1",
     "csv-stringify": "0.0.8",
+    "fs-extra": "^7.0.1",
     "good": "^6.3.0",
     "good-winston": "^1.0.0",
     "hapi": "^8.8.0",
@@ -48,6 +49,7 @@
     "hapi-response-meta": "^0.3.0",
     "hapi-router": "^3.0.1",
     "hiredis": "^0.4.1",
+    "joi": "^14.3.1",
     "knex": "^0.16.3",
     "knex-postgis": "^0.7.0",
     "little-owl": "^1.0.0",
@@ -65,13 +67,13 @@
   },
   "devDependencies": {
     "apidoc": "^0.13.1",
-    "chai": "^3.2.0",
+    "chai": "^4.2.0",
     "eslint": "^2.0.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2",
-    "mocha": "^2.2.5",
-    "request": "^2.67.0"
+    "mocha": "^6.0.2",
+    "request": "^2.88.0"
   },
   "apidoc": {
     "title": "Open AQ Platform API",
