--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,22 @@
-api:
-  build: .
-  volumes:
-  - .:/local
-  env_file: ./local.env
-  ports:
-  - "80:3004"
-api-test:
-  build: .
-  volumes:
-  - .:/local
-  environment:
-  - PSQL_HOST=postgis
-  - PSQL_USER=docker
-  - PSQL_PASSWORD=docker
-  - PSQL_DATABASE=gis
-  links:
-  - postgis
-postgis:
-  image: kartoza/postgis:9.4-2.1
+version: "3"
+services:
+  api:
+    build: .
+    volumes:
+    - .:/local
+    env_file: ./local.env
+    ports:
+    - "80:3004"
+  api-test:
+    build: .
+    volumes:
+    - .:/local
+    environment:
+    - PSQL_HOST=postgis
+    - PSQL_USER=docker
+    - PSQL_PASSWORD=docker
+    - PSQL_DATABASE=gis
+    links:
+    - postgis
+  postgis:
+    image: kartoza/postgis:9.4-2.1
