--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npm run lint && npm run mocha",
     "_seed": "node_modules/.bin/knex seed:run",
     "_migrate": "sleep 1; until node_modules/.bin/knex migrate:latest; do echo \"Database is not ready, will retry in 5 seconds...\"; sleep 5; done",
-    "mocha": "NODE_ENV=test API_DEBUG=true mocha test/test--index.js --require babel-register",
+    "mocha": "NODE_ENV=test mocha test/test--index.js --require babel-register",
     "start": "node index.js",
     "dev": "NODE_ENV=development API_DEBUG=true node_modules/.bin/nodemon index.js",
     "docs": "apidoc -i api/ -o docs/",
@@ -46,7 +46,7 @@
     "good-winston": "^4.0.0",
     "@hapi/hapi": "^17.0.0",
     "hapi-auth-jwt2": "^8.0.0",
-    "hapi-paginate": "github:developmentseed/hapi-paginate#cfa9067d634e2bcef9a631ee71646cc9dbf2f5f7",
+    "hapi-paginate": "github:dolugen/hapi-paginate#e0f07785c5bdc7dfbc617352b0e9e6ced17aea5f",
     "hapi-qs": "^2.0.1",
     "hapi-response-meta": "github:dolugen/hapi-response-meta#acc9baefa16f1df3bc49a20f16194a1da7dc6642",
     "hapi-router": "^4.0.1",
