--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "good": "^8.0.0",
     "good-winston": "^4.0.0",
     "@hapi/hapi": "^17.0.0",
+    "@hapi/joi": "^15.0.0",
     "hapi-auth-jwt2": "^8.0.0",
     "hapi-paginate": "github:dolugen/hapi-paginate#e0f07785c5bdc7dfbc617352b0e9e6ced17aea5f",
     "hapi-qs": "^2.0.1",
     "hapi-response-meta": "github:dolugen/hapi-response-meta#acc9baefa16f1df3bc49a20f16194a1da7dc6642",
     "hapi-router": "^4.0.1",
     "hiredis": "^0.4.1",
-    "joi": "^10.6.0",
     "jwks-rsa": "^1.4.0",
     "knex": "^0.16.3",
     "knex-postgis": "^0.7.0",
